package com.paz.razabi.driving;

public class Globals {
    public static String currTeacher;
    public static boolean firstEnter = true;

}
